samples/_failures_safe/1761536786_3edda8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_83163f52.c: In function ‘main’:
./samples/SAFE/__tmp_83163f52.c:161:9: error: expected declaration or statement at end of input
  161 |         printf("No valid log entries found\n");
      |         ^~~~~~
./samples/SAFE/__tmp_83163f52.c:161:9: error: expected declaration or statement at end of input
